Fix header overlap.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,10 +10,16 @@ body {
 
 header {
   position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding-top: 8px;
+
   z-index: 1;
   height: 69px;
   width: 100%;
   border-bottom: 1px solid seashell;
+  background-color: black;
 
   display: flex;
   align-items: center;
@@ -63,15 +69,28 @@ header nav a {
 }
 
 .teaofthemonth-text {
-  padding-top: 40px;
+  padding: 20px 0 10px 0;
+}
+
+.teaofthemonth-text h4 {
+  margin-bottom: 0;
 }
 
 .teaofthemonth-images {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
-.teaofthemonth-images img {
+.teaofthemonth-images-imageplustext {
+  padding: 15px 15px 10px 15px;
+}
+
+.teaofthemonth-images-imageplustext img {
   width: 300px;
   height: 200px;
+}
+
+.teaofthemonth-images-imageplustext h4 {
+  margin: 10px 0 0 0;
 }
